# binocularslive

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
.github/workflows/: ci_testing.yml
apis/: admin.py  models.py  permissions.py  tasks.py  tests.py  views.py
apis/migrations/: 0001_initial.py  0002_apikey_end_date_apikey_start_date.py  0003_alter_apikey_end_date_alter_apikey_start_date.py  0004_alter_apikey_n_allowed_requests.py  0005_alter_apikey_n_allowed_requests.py
binocularslive/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
binocularslive/templates/: index.html
binocularslive/templatetags/: project_tags.py
scripts/: demo.py  pg_backup.bash  run_dev_celery.bash
server_files/: README.md
server_files/etc/: crontab  hosts
server_files/etc/conf.d/: celery
server_files/etc/nginx/sites-available/: binocularslive.nginx
server_files/etc/systemd/system/: celery.service  celeryserial.service  gunicorn.service
users/migrations/: 0001_initial.py
